--- a/pages/home.htm
+++ b/pages/home.htm
@@ -1,5 +1,8 @@
-title = "Blank theme"
+title = "Blank Theme Home Page"
 url = "/"
 layout = "default"
+is_hidden = 0
 ==
-<img src="{{ 'assets/images/theme-preview.png'|theme }}">
+<h1>This is the home page</h1>
+
+<p>Home page content</p>
