--- a/pages/blog-post.htm
+++ b/pages/blog-post.htm
@@ -5,7 +5,6 @@ is_hidden = 0
 
 [blogPost]
 slug = "{{ :slug }}"
-categoryPage = "blog"
+categoryPage = "blog-category"
 ==
-
 {% component 'blogPost' %}
