--- a/pages/blog.htm
+++ b/pages/blog.htm
@@ -5,10 +5,10 @@ is_hidden = 0
 
 [blogPosts]
 pageNumber = "{{ :page }}"
-postsPerPage = 1
+postsPerPage = 10
 noPostsMessage = "No posts found"
 sortOrder = "published_at desc"
-categoryPage = "blog"
+categoryPage = "blog-category"
 postPage = "blog-post"
 ==
 <?php
