update package.json wih new dependencies

--- a/pages/services-list.htm
+++ b/pages/services-list.htm
@@ -15,8 +15,10 @@ pagination = "normal"
 itemsPerPage = 12
 ajaxItemsContainer = "item-list"
 ajaxPagerContainer = "item-list-pagination"
+typePage = "services-list"
+categoryPage = "services-list"
+itemPage = "item-display-generated-type"
 ==
-
 {% import _self as menu %}
 {% macro recursiveMenu(item) %}
     {% import _self as menu %}
