--- a/pages/item-display-generated-category.htm
+++ b/pages/item-display-generated-category.htm
@@ -1,5 +1,5 @@
 title = "Generated Category Item Display"
-url = "/item/:categorySlug/:itemSlug"
+url = "/item/c/:categorySlug/:itemSlug"
 layout = "default"
 is_hidden = 0
 
@@ -7,5 +7,7 @@ is_hidden = 0
 itemSlug = "{{ :itemSlug }}"
 typeSlug = "{{ :typeSlug }}"
 categorySlug = "{{ :categorySlug }}"
+typePage = "services-list"
+categoryPage = "services-list"
 ==
 {% component 'showItem' %}
