--- a/pages/item-display-generated-type.htm
+++ b/pages/item-display-generated-type.htm
@@ -7,5 +7,7 @@ is_hidden = 0
 itemSlug = "{{ :itemSlug }}"
 typeSlug = "{{ :typeSlug }}"
 categorySlug = "{{ :categorySlug }}"
+typePage = "services-list"
+categoryPage = "services-list"
 ==
 {% component 'showItem' %}
