--- a/pages/blog.htm
+++ b/pages/blog.htm
@@ -60,6 +60,12 @@ function listBlogPosts($page)
 }
 ?>
 ==
-<h1>The blog listing</h1>
+<div class="container">
+    <div class="grid">
+        <div class="col-12">
+            <h1>The blog listing</h1>
 
-{% component 'blogPosts' %}
+            {% component 'blogPosts' %}
+        </div>
+    </div>
+</div>
