--- a/pages/blog-categories.htm
+++ b/pages/blog-categories.htm
@@ -8,4 +8,10 @@ slug = "{{ :slug }}"
 displayEmpty = 0
 categoryPage = "blog-category"
 ==
-{% component 'blogCategories' %}
+<div class="container">
+    <div class="grid">
+        <div class="col-12">
+            {% component 'blogCategories' %}
+        </div>
+    </div>
+</div>
