--- a/pages/blog-category.htm
+++ b/pages/blog-category.htm
@@ -12,4 +12,10 @@ sortOrder = "published_at desc"
 categoryPage = "blog-category"
 postPage = "blog-post"
 ==
-{% component 'blogPosts' %}
+<div class="container">
+    <div class="grid">
+        <div class="col-12">
+            {% component 'blogPosts' %}
+        </div>
+    </div>
+</div>
