--- a/pages/blog-post.htm
+++ b/pages/blog-post.htm
@@ -7,4 +7,10 @@ is_hidden = 0
 slug = "{{ :slug }}"
 categoryPage = "blog-category"
 ==
-{% component 'blogPost' %}
+<div class="container">
+    <div class="grid">
+        <div class="col-12">
+            {% component 'blogPost' %}
+        </div>
+    </div>
+</div>
