--- a/pages/cookies.htm
+++ b/pages/cookies.htm
@@ -7,4 +7,10 @@ is_hidden = 0
 [cookieManager]
 include_css = 1
 ==
-{% component 'cookieManager' %}
+<div class="container">
+    <div class="grid">
+        <div class="col-12">
+            {% component 'cookieManager' %}
+        </div>
+    </div>
+</div>
