--- a/pages/home.htm
+++ b/pages/home.htm
@@ -3,6 +3,11 @@ url = "/"
 layout = "default"
 is_hidden = 0
 ==
-<h1>This is the home page</h1>
-
-<p>Home page content</p>
+<div class="container">
+    <div class="grid">
+        <div class="col-12">
+            <h1>This is the home page</h1>
+            <p>Home page content</p>
+        </div>
+    </div>
+</div>
