many many things

--- a/pages/home.htm
+++ b/pages/home.htm
@@ -3,11 +3,10 @@ url = "/"
 layout = "default"
 is_hidden = 0
 ==
-<div class="container">
-    <div class="grid">
-        <div class="col-12">
-            <h1>This is the home page</h1>
-            <p>Home page content</p>
-        </div>
-    </div>
+
+{# Start with a col - This partial is rendered inside a grid element #}
+
+<div class="col-12">
+    <h1>This is the home page</h1>
+    <p>Home page content</p>
 </div>
